# openfisk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: ci.yaml  pypi-publish.yaml
examples/: __init__.py  test__example.py
openfisk/: __init__.py
openfisk/nl/: __init__.py
openfisk/nl/asset/: __init__.py  calculate_asset_tax.py  test__calculate_asset_tax.py
openfisk/nl/income/: __init__.py  calculate_income_tax.py  test__calculate_income_tax.py
